Fix some spacing on some notes.

--- a/theme/static/css/styles.css
+++ b/theme/static/css/styles.css
@@ -54,6 +54,11 @@ div.admonition {
 div.admonition p.first, div.admonition p.first + p {
     display: inline;
 }
+/* The bottom margin of the first two paragraphs gets broken by making them
+ * inline, add it as a top-margin for the element below. */
+div.admonition p.first + p + * {
+    margin-top: 16px;
+}
 /* Add a : after "Note". */
 p.admonition-title::after {
     content: ":";
